# multi-user-text-editor

client/multi-user-text-editor/: package-lock.json  package.json
client/multi-user-text-editor/src/app/editor/: editor.tsx  page.tsx
client/multi-user-text-editor/src/app/hello/: page.tsx
server/: main.rs
server/multi-user-backend/: Cargo.toml
server/multi-user-backend/src/: main.rs
